--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Aarnavi Tomar</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="https://www.linkedin.com/in/amish-gupta-%E2%9C%93-219a551a4/"><i class="bi bi-linkedin"></i>    Hire me</a>
+                <a href="https://www.linkedin.com/in/aarnavi-tomar-592082270/"><i class="bi bi-linkedin"></i>    Hire me</a>
             </div>
         </div>
     </section>
